# -FalkorDB-FastMCP-Proxy

./: .bandit  .dxtignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHENTICATION_TEST_RESULTS.md  Dockerfile  FalkorDB-FastMCP-Proxy.dxt  Makefile  OPENCODE_CONFIG.md  README.md  REMOTE_ACCESS.md  claude_authentication_demo.py  claude_desktop_proxy.py  docker-compose.yml  get_docker_token.py  manifest.json  opencode.example.json  opencode.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test_auth_fix.py  test_authentication.py  test_mcp.sh  test_mcp_client.py  test_mcp_direct.py  test_multitenant.py  test_proxy.py  test_remote_mcp.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
client/: claude_desktop_proxy.py  requirements.txt
docs/: AGENTS.md  README.md  STATUS.md  claude-desktop-integration.md  client-onboarding-guide.md  deployment-guide.md  deployment-status.md  implementation-plan.md  implementation-roadmap.md  known-issues.md  mcp-vs-integrations.md  multi-tenant-authentication.md  tenant-implementation-plan.md  testing.md
docs/ai-workflow/: AGENTS.md  README.md  ai-context-management.md  development-process-integration.md  modular-documentation-workflow.md  ticket-management-workflow.md
docs/exploratory-analysis/: AGENTS.md  README.md  async-vector-job-solution.md  hardware-optimized-architecture.md  implementation-options-comparison.md  performance-considerations.md  practical-implementation-guide.md  vector-capabilities-assessment.md  vector-query-examples.md
docs/features/: README.md  cicd-pipeline-docker-semver.md  collaborative-queries.md  graphql-query-builder.md  web-ui-user-management.md
docs/issues/: ISSUE-complete-tenant-tools.md  ISSUE-docker-dual-port.md  ISSUE-fastmcp-url-tokens.md
docs/project-knowledge-base/: AGENTS.md  README.md  architecture-context.md  configuration-reference.md  development-processes.md  implementation-status.md  ticket-management-context.md  troubleshooting-database.md  vector-implementation-context.md
docs/project-management/: AGENTS.md  deployment-status.md  implementation-plan.md  known-issues.md  tenant-implementation-plan.md
docs/project-management/features/: AGENTS.md  README.md  collaborative-queries.md  graphql-query-builder.md  web-ui-user-management.md
docs/project-management/features/completed/: cicd-pipeline-docker-semver.md
docs/project-management/issues/: AGENTS.md  ISSUE-complete-tenant-tools.md  ISSUE-fastmcp-url-tokens.md  ISSUE-multi-device-testing.md  README.md
docs/project-management/issues/pending/: ISSUE-docker-dual-port.md  ISSUE-multi-device-testing.md
docs/project-management/testing/: AGENTS.md  AUTHENTICATION_TEST_RESULTS.md
docs/technical-guides/: AGENTS.md  architecture.md  deployment-guide.md  dxt-packaging-guide.md  fastmcp-sse-configuration-fix.md  mcp-vs-integrations.md  multi-tenant-authentication.md
docs/user-guides/: AGENTS.md  REMOTE_ACCESS.md  claude-connection-troubleshooting.md  claude-desktop-integration.md  client-onboarding-guide.md  opencode-integration.md  testing.md
requirements/: README.md  base.txt  ci.txt  dev.txt  prod.txt
server/: fastmcp_proxy.py
src/: fastmcp_proxy.py  fastmcp_proxy_dual.py  fastmcp_proxy_tenant.py
tests/: test_auth_fix.py  test_mcp_server.py  test_proxy.py  test_remote_mcp.py  test_unified_auth.py  test_unified_proxy.py
tests/utilities/: claude_authentication_demo.py
